Remove use of java 21 getFirst() to reduce impact